{
    "name": "XR Hand Menu",
    "maps": [
        {
            "name": "UI",
            "id": "32f2129b-6ae3-431d-a308-34390ae9a16b",
            "actions": [
                {
                    "name": "Hand Menu",
                    "type": "Button",
                    "id": "f5d57636-dd83-4ec2-b632-c2fe4cdd8c42",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "67801cb5-c89c-4ed1-9d37-0a307a86078f",
                    "path": "<XRController>{LeftHand}/primaryButton",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Hand Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "HandAnimations",
            "id": "fd1ed561-881d-4dea-ae6e-fa3d6d413412",
            "actions": [
                {
                    "name": "GripRight",
                    "type": "Button",
                    "id": "f7e42a52-8223-4fa3-ad90-c95fc1c9c45c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PinchRight",
                    "type": "Button",
                    "id": "32741030-d5d6-49e9-b6a6-2683e2537ea9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GripLeft",
                    "type": "Button",
                    "id": "ef6e9f7c-7732-4d5b-97f8-3c89c59eac12",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PinchLeft",
                    "type": "Button",
                    "id": "6ac76105-10a7-4d52-b0bc-db3f12831bf5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9adee04d-99df-42f5-8ede-7615e780792a",
                    "path": "<XRController>{RightHand}/gripButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GripRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4268f520-c7ed-48ab-87c6-d3815d2e108f",
                    "path": "<XRController>{RightHand}/triggerButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PinchRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0b5a33da-3d6f-48d8-847d-bb6a821b654d",
                    "path": "<XRController>{LeftHand}/gripButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GripLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b66dac77-7924-4709-ba6c-fe9d54ec623c",
                    "path": "<XRController>{LeftHand}/triggerButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PinchLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}